--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <title>Page Title</title>
 </head>
 <body>
-        <h1>This is a Heading</h1>
+        <h1>This is a Headingboyyyy</h1>
         <p>First paragraph.</p>
-	        <p>This is a paragraph.</p>
+                <p>This is a paragraph.</p>
 
         <p> This is another paragraph <p>
 </body>
